--- a/config.yaml
+++ b/config.yaml
@@ -10,8 +10,8 @@ common:
     name: 'all-MiniLM-L6-v2.gguf2.f16.gguf'
     dimensionality: 384
     kwargs: 
-      # normalize_embeddings: True                  # Uncomment when using  multi-qa-MiniLM-L6-dot-v1
       allow_download: True                          # Uncomment when using  all-MiniLM-L6-v2.gguf2.f16.gguf
+      # normalize_embeddings: True                  # Uncomment when using  multi-qa-MiniLM-L6-dot-v1
       # prompt_name:s2p_query #for only retrieval   # Uncomment when using  nomic-embed-text-v1.5.f16.gguf
   reranker_model: 'BAAI/bge-reranker-base'
   vectorstore:
@@ -20,7 +20,7 @@ common:
     host: 'localhost'  
     port: 8000  
     k : 200   #50-training, 200-testing
-  compression_retriever_top_n: 7   #1 for fine tunning , 7 for inference    3 ft
+  compression_retriever_top_n: 5   #1 for fine tunning , 7 for inference
   trained_model_dir: 'bin/driver-multi-qa-MiniLM-L6-dot-v1'
 
 data-ingest:
